k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  author-marketplace
spec:
  selector:
    app:  author-marketplace
  type:  NodePort
  ports:
  - name:  http
    port:  80
    targetPort:  80
